Fixes formatting issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,27 @@ hr {
 .navbar-default .navbar-toggle:hover > .icon-bar {
   background-color: #608dfd;
 }
+.project-title {
+    padding-bottom: 70px;
+}
+.project-title h3 {
+  position: absolute;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  left: 0%;
+  margin-left: 20px;
+}
+.project-title h3::after {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  height: 2px;
+  width: 150px;
+  bottom: 0;
+  margin-left: -10px;
+  left: 0%;
+}
 .section-title {
   margin-bottom: 70px;
 }
@@ -654,5 +675,9 @@ label {
 .about-img {
     width: 264px !important;
     height: 350px;
-    margin-left: 150px;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center !important;
 }
